# coco-experiment

./: .clang-format  .clang-format-ignore  .clang-tidy  .git-blame-ignore-revs  .gitignore  DEVELOPMENT.md  LICENSE  README.md  env.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  other.md
.github/workflows/: build.yml  pypi_publish.yml  source_build.yml  tag_release.yml  test_c.yml  test_java.yml  test_octave.yml  test_python.yml  test_rust.yml  valgrind.yml
scripts/: fabricate  requirements.txt
src/: CMakeLists.txt  brentq.c  brentq.cpp  brentq.h  c_linear.c  c_linear.cpp  c_linear.h  coco.h  coco_archive.c  coco_archive.cpp  coco_archive.h  coco_internal.h  coco_observer.c  coco_observer.cpp  coco_observer.h  coco_platform.c  coco_platform.h  coco_problem.c  coco_problem.cpp  coco_problem.h  coco_random.c  coco_random.cpp  coco_random.h  coco_runtime_c.c  coco_runtime_c.cpp  coco_runtime_c.h  coco_runtime_matlab.c  coco_runtime_matlab.cpp  coco_runtime_matlab.h  coco_string.c  coco_string.cpp  coco_string.h  coco_suite.c  coco_suite.cpp  coco_suite.h  coco_utilities.c  coco_utilities.cpp  coco_utilities.h  f_attractive_sector.c  f_attractive_sector.cpp  (+242 more)
test/integration-test/: CMakeLists.txt  test_bbob-mixint.cpp  test_biobj.c  test_instance_extraction.c
test/regression-test/: test_loggers.py  test_suites.py
test/regression-test/create/: create_suite_data.py
test/unit-test/: CMakeLists.txt  README.md  about_equal.c  about_equal.h  test_biobj_utilities.cpp  test_brentq.cpp  test_coco_archive.cpp  test_coco_observer.c  test_coco_observer.cpp  test_coco_problem.c  test_coco_problem.cpp  test_coco_string.c  test_coco_string.cpp  test_coco_suite.cpp  test_coco_utilities.c  test_coco_utilities.cpp  test_logger_bbob.c  test_logger_bbob.cpp  test_logger_biobj.c  test_logger_biobj.cpp  test_mo_utilities.c  test_mo_utilities.cpp  test_tainted_problem.c
