project('cocoex', 'c', default_options: ['warning_level=3', 'buildtype=release'])

cc = meson.get_compiler('c')
m_dep = cc.find_library('m', required: false)

lib_cocoex = static_library(
  'cocoex',
  'brentq.c',
  'c_linear.c',
  'coco_archive.c',
  'coco_observer.c',
  'coco_platform.c',
  'coco_problem.c',
  'coco_random.c',
  'coco_runtime_c.c',
  'coco_string.c',
  'coco_suite.c',
  'coco_utilities.c',
  'coco_version.c',
  'f_attractive_sector.c',
  'f_bent_cigar.c',
  'f_bent_cigar_generalized.c',
  'f_bueche_rastrigin.c',
  'f_different_powers.c',
  'f_discus.c',
  'f_discus_generalized.c',
  'f_ellipsoid.c',
  'f_gallagher.c',
  'f_griewank_rosenbrock.c',
  'f_katsuura.c',
  'f_linear_slope.c',
  'f_lunacek_bi_rastrigin.c',
  'f_rastrigin.c',
  'f_rosenbrock.c',
  'f_schaffers.c',
  'f_schwefel.c',
  'f_schwefel_generalized.c',
  'f_sharp_ridge.c',
  'f_sharp_ridge_generalized.c',
  'f_sphere.c',
  'f_step_ellipsoid.c',
  'f_weierstrass.c',
  'logger_bbob.c',
  'logger_bbob_old.c',
  'logger_biobj.c',
  'logger_rw.c',
  'logger_toy.c',
  'mo_avl_tree.c',
  'mo_utilities.c',
  'observer_bbob.c',
  'observer_bbob_old.c',
  'observer_biobj.c',
  'observer_rw.c',
  'observer_toy.c',
  'suite_bbob.c',
  'suite_bbob_legacy_code.c',
  'suite_bbob_mixint.c',
  'suite_bbob_noisy.c',
  'suite_bbob_noisy_utilities.c',
  'suite_biobj.c',
  'suite_biobj_best_values_hyp.c',
  'suite_biobj_ext.c',
  'suite_biobj_mixint.c',
  'suite_biobj_mixint_best_values_hyp.c',
  'suite_biobj_utilities.c',
  'suite_cons_bbob.c',
  'suite_cons_bbob_problems.c',
  'suite_largescale.c',
  'suite_sbox_cost.c',
  'suite_toy.c',
  'transform_obj_cauchy_noise.c',
  'transform_obj_gaussian_noise.c',
  'transform_obj_norm_by_dim.c',
  'transform_obj_oscillate.c',
  'transform_obj_penalize.c',
  'transform_obj_power.c',
  'transform_obj_scale.c',
  'transform_obj_shift.c',
  'transform_obj_uniform_noise.c',
  'transform_vars_affine.c',
  'transform_vars_asymmetric.c',
  'transform_vars_blockrotation.c',
  'transform_vars_blockrotation_helpers.c',
  'transform_vars_brs.c',
  'transform_vars_composed.c',
  'transform_vars_conditioning.c',
  'transform_vars_discretize.c',
  'transform_vars_enforce_box.c',
  'transform_vars_gallagher_blockrotation.c',
  'transform_vars_oscillate.c',
  'transform_vars_permblockdiag.c',
  'transform_vars_permutation.c',
  'transform_vars_permutation_helpers.c',
  'transform_vars_scale.c',
  'transform_vars_shift.c',
  'transform_vars_x_hat.c',
  'transform_vars_x_hat_generic.c',
  'transform_vars_z_hat.c',
)
